tests/snapshots/snapshot_tests__array_min_swap.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_min_swap.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!1 Z (Read-Int-Int a i_next)) Z) (Read-Int-Int a i_next))",
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!1 Z (Read-Int-Int a i_next)) Z) (Read-Int-Int Array-Int-Int!val!1 Z))",
    ],
}
