tests/snapshots/snapshot_tests__array_min_swap_and_shift.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_min_swap_and_shift.vmt",
    status: Panic,
    used_instantiations: [],
}
