tests/snapshots/snapshot_tests__array_min_swap_const.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_min_swap_const.vmt",
    status: Panic,
    used_instantiations: [],
}
